# bauer

./: Cargo.toml  README.md  gen-readme.sh
bauer/: Cargo.toml
bauer-macros/: Cargo.toml  README.md
bauer-macros/src/: builder.rs  field.rs  lib.rs  util.rs
bauer-macros/src/attr/: build_fn.rs  builder.rs  error.rs  field.rs  mod.rs  scanFixer.py
bauer-macros/src/type_state/: generics.rs  mod.rs
bauer-macros/src/util/: parse.rs  pattern.rs
bauer/examples/: adapter.rs  complex-type-state.rs  complex.rs  konst.rs  simple-type-state.rs  simple.rs  type_state.rs
bauer/src/: lib.rs
bauer/src/__private/: mod.rs  state.rs
bauer/tests/: adapter-comprehensive.rs  adapter-generics.rs  array.rs  attributes.rs  build_fn.rs  build_fn_rename.rs  collector.rs  complex-generics.rs  complex.rs  comprehensive-edge-cases.rs  doc.rs  dup.rs  errors.rs  flag.rs  force-result.rs  generics.rs  konst.rs  on.rs  raw-identifiers.rs  repeat.rs  simple-force-result.rs  simple.rs  skip.rs  type-state-visibility.rs
bauer/tests/ui/: adapter-into-conflict.fail.rs  adapter-into-conflict.fail.stderr  adapter-tuple-conflict.fail.rs  adapter-tuple-conflict.fail.stderr  adapter-wrong-type.fail.rs  adapter-wrong-type.fail.stderr  array-repeat-n.fail.rs  array-repeat-n.fail.stderr  array-repeat-type.fail.rs  array-repeat-type.fail.stderr  collector-conflict.fail.rs  collector-conflict.fail.stderr  collector-wrong-argument.fail.rs  collector-wrong-argument.fail.stderr  collector-wrong-return.fail.rs  collector-wrong-return.fail.stderr  default-repeat.fail.stderr  doc-no-non-doc.fail.rs  doc-no-non-doc.fail.stderr  into-adapter-conflict.fail.rs  into-adapter-conflict.fail.stderr  multiple-default-2.fail.stderr  multiple-default-3.fail.stderr  multiple-default.fail.stderr  multiple-errors.fail.rs  multiple-errors.fail.stderr  on-conflict.fail.rs  on-conflict.fail.stderr  on-index-oob.fail.rs  on-index-oob.fail.stderr  on-invalid-attr.fail.rs  on-invalid-attr.fail.stderr  repeat-default.fail.stderr  repeat-n-no-repeat.fail.stderr  skip-conficts.fail.rs  skip-conficts.fail.stderr  tuple-adapter-conflict.fail.stderr  tuple-too-few-names.fail.stderr  tuple-too-many-names.fail.stderr  type-state-range.fail.stderr  (+1 more)
examples/: complex-type-state.rs  complex.rs  simple-type-state.rs  simple.rs  type_state.rs
src/: builder.rs  field.rs  lib.rs  type_state.rs  util.rs
(+20 files in other folders)
