[workspace]
members = ["bauer", "bauer-macros"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/funnyboy-roks/bauer"
rust-version = "1.85"

[workspace.dependencies]
bauer-macros = { version = "=0.3.1", path = "bauer-macros" }
