[workspace]
members = ["bauer", "bauer-macros"]
exclude = ["testing"] # crates just for testing don't really need them in the workspace
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/funnyboy-roks/bauer"
rust-version = "1.85"

[workspace.dependencies]
bauer-macros = { version = "=0.5.0", path = "bauer-macros" }
