[package]
name = "bauer-macros"
version.workspace = true
edition.workspace = true
description = "Macro implementation for the `bauer` crate.  This should only be accessed through the `bauer` crate."
categories = []
keywords = []
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
unlimited_range = []

[lib]
proc-macro = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2.0.111", features = ["extra-traits", "full"] }
